# fms_variate

./: CMakeLists.txt  fms_hypergeometric.h  fms_sf_hypergeometric.h  fms_sf_hypergeometric.t.cpp  fms_test.h  fms_variate.cpp  fms_variate.h  fms_variate.t.cpp  fms_variate.vcxproj  fms_variate.vcxproj.filters  fms_variate_base.h  fms_variate_constant.h  fms_variate_constant.t.cpp  fms_variate_interface.h  fms_variate_logistic.h  fms_variate_logistic.t.cpp  fms_variate_normal.h  fms_variate_normal.t.cpp
